--- a/index.html
+++ b/index.html
@@ -53,26 +53,20 @@
         return {
           apps: [
             {
-              name: 'Explore Season4 Sensor Collected Traits',
-              description: 'Provide a day-by-day exploration of trait values across all cultivars',
-              url: '/trait_explorer',
-              image: '/static/trait_explorer.png',
-            },
-            {
               name: 'Fit Continuous Variable Traits',
-              description: 'Luke to provide a pithy saying here',
+              description: 'Fit a model to continuous character values',
               url: '/fit_continuous',
               image: '/static/fitContinuous_app.png',
             },
             {
               name: 'Phylosignal',
-              description: 'Search for Phylosignal given a tree and a matrix',
+              description: 'Search for phylogenetic signal, given a tree and a matrix',
               url: '/phylosignal',
               image: '/static/phylosignal_app.png',
             },
             {
               name: 'Ancestral State Reconstruction',
-              description: 'SExplore the ancestral signal of a particular trait across the tree',
+              description: 'Explore the ancestral signal of a particular trait across the tree',
               url: '/asr',
               image: '/static/asr.png',
             },
