Fit Discrete bones added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             },
             {
               name: 'Fit Discrete Variable Traits',
-              description: 'Not a priority right now',
+              description: 'Fit a model to discrete character values',
               url: '/fit_discrete',
               image: '/static/fitDiscrete_app.png',
             },
