fix download on phylosignal; partial additional of json-tree to fit_continuous; still need to build tree in python method

--- a/fit_continuous/index.html
+++ b/fit_continuous/index.html
@@ -133,6 +133,11 @@
               <v-card-text>Phenogram Plot</v-card-text>
               <div ref="phenogram"></div>
               </v-card>
+
+              <v-card class ="mb-4 ml-4 mr-4">
+                <v-card-text>Tree Plot</v-card-text>
+                <div ref="jsontree"></div>
+                </v-card>
           <!-- </template> -->
         </div>
       </v-layout>
@@ -253,7 +258,7 @@
                 // Kristen: other variables here
                 that.running = false
                 that.renderTheSpec(that)
-
+                that.renderPrettyJsonTree(that)
               },
               error: function(data){
                 alert( 'Sorry.' );
@@ -377,6 +382,134 @@
 
           vegaEmbed(that.$refs.phenogram, spec);
         },
+
+
+    async renderPrettyJsonTree(that) {
+
+        var spec = {
+
+        title: "Fit Continuous Result",
+        width: 800,
+        height: 800,
+        $schema: "https://vega.github.io/schema/vega/v5.json",
+        description: "An example of Cartesian layouts for a node-link diagram of hierarchical data.",
+
+      padding: 5,
+
+      signals: [
+        {
+          name: "labels", value: true,
+          bind: {input: "checkbox"}
+        },
+        {
+          name: "layout", value: "tidy",
+          bind: {input: "radio", options: ["tidy", "cluster"]}
+        },
+        {
+          name: "links", value: "diagonal",
+          bind: {
+            input: "select",
+            options: ["line", "curve", "diagonal", "orthogonal"]
+          }
+        },
+        {
+          name: "separation", value: false,
+          bind: {input: "checkbox"}
+        }
+      ],
+
+      data: [
+        {
+          name: "tree",
+          values: this.result['jsonTree']['values'],
+          transform: [
+                {
+                  type: "stratify",
+                  key: "id",
+                  parentKey: "parent"
+                },
+                {
+                  type: "tree",
+                  method: {signal: "layout"},
+                  size: [{signal: "height"}, {signal: "width - 100"}],
+                  separation: {signal: "separation"},
+                  as: ["y", "x", "depth", "children"]
+                }
+              ]
+            },
+            {
+              name: "links",
+              source: "tree",
+              transform: [
+                { type: "treelinks" },
+                {
+                  type: "linkpath",
+                  orient: "horizontal",
+                  shape: {signal: "links"}
+                }
+              ]
+            }
+          ],
+
+      scales: [
+        {
+          name: "color",
+          type: "linear",
+          range: {"scheme": "magma"},
+          domain: {"data": "tree", "field": "depth"},
+          zero: true
+        }
+      ],
+
+      marks: [
+        {
+          type: "path",
+          from: {"data": "links"},
+          encode: {
+            update: {
+              path: {"field": "path"},
+              stroke: {"value": "#ccc"}
+            }
+          }
+        },
+        {
+          type: "symbol",
+          from: {"data": "tree"},
+          encode: {
+            enter: {
+              size: {"value": 100},
+              stroke: {"value": "#fff"}
+            },
+            update: {
+              x: {field: "x"},
+              y: {field: "y"},
+              fill: {scale: "color", field: "depth"}
+            }
+          }
+        },
+        {
+          type: "text",
+          from: {data: "tree"},
+          encode: {
+            enter: {
+              text: {field: "name"},
+              fontSize: {value: 9},
+              baseline: {value: "middle"}
+            },
+            update: {
+              x: {field: "x"},
+              y: {field: "y"},
+              dx: {signal: "datum.children ? -7 : 7"},
+              align: {signal: "datum.children ? 'right' : 'left'"},
+              opacity: {signal: "labels ? 1 : 0"}
+            }
+          }
+        }
+      ]
+    }
+
+    vegaEmbed(that.$refs.jsontree, spec);
+  },
 
 
 
