adding square trees to Phlotree rendering in ASR app.  still need square trees in fit_continuous as well.

--- a/asr/index.html
+++ b/asr/index.html
@@ -201,7 +201,8 @@
                   that.runCompleted = true
                   // Kristen: other variables here
                   that.running = false
-                  that.renderTheSpec(that)
+                  //that.renderTheSpec(that)
+                  that.squareTreeRender(that)
 
                 },
                 error: function(data){
@@ -326,6 +327,65 @@
 
             vegaEmbed(that.$refs.asr_plot, spec);
           },
+
+
+    async squareTreeRender(that) {
+
+      var spec = {
+
+        title: "Fit Continuous Result",
+        width: 1200,
+        height: 800,
+        layer: [
+          {data: {values: that.result.points, format:{type: "json"}},
+          params: [{
+            name: "grid",
+            select: "interval",
+            bind: "scales"
+          }],
+          mark: {type:"point", fill: "#4C78A8", tooltip: {content: "data"}},
+          encoding: {
+            x: {field: "Node_x_coord", type: "quantitative"},
+            y: {field: "Node_y_coord", type: "quantitative"},
+            }
+          },
+          {data: {values: that.result.points, format:{type: "json"}},
+          params: [{
+            name: "grid_2",
+            select: "interval",
+            bind: "scales"
+          }],
+          mark: {type:"text", fill: "#000000", align: {expr:"datum.Node_x_coord"}, dx: {expr:10}},
+          encoding: {
+            x: {field: "Node_x_coord", type: "quantitative"},
+            y: {field: "Node_y_coord", type: "quantitative"},
+            text: {field: "Species", type: "ordinal"},
+            }
+          },
+          {data: {values: that.result.connections, format:{type: "json"}},
+          mark: {type:"rule", color:"darkgreen", strokeWidth:0.4, tooltip: {content: "data"}},
+          encoding: {
+            x: {field: "V1_x", type: "quantitative"},
+            x2: {field: "V1_x", type: "quantitative"},
+            y: {field: "V1_y", type: "quantitative"},
+            y2: {field: "V2_y", type: "quantitative"},
+            }
+          },
+          {data: {values: that.result.connections, format:{type: "json"}},
+          mark: {type:"rule", color:"darkgreen", strokeWidth:0.4, tooltip: {content: "data"}},
+          encoding: {
+            x: {field: "V1_x", type: "quantitative"},
+            x2: {field: "V2_x", type: "quantitative"},
+            y: {field: "V2_y", type: "quantitative"},
+            y2: {field: "V2_y", type: "quantitative"}
+            }
+          },
+        ]
+        };
+
+        vegaEmbed(that.$refs.asr_plot, spec);
+      },
+
 
 
 
