Missing commas added to square tree spec

--- a/fit_continuous/index.html
+++ b/fit_continuous/index.html
@@ -536,8 +536,8 @@
           }],
           mark: {type:"point", fill: "#4C78A8", tooltip: {content: "data"}},
           encoding: {
-            x: {field: "Node_x_coord", type: "quantitative"axis: {grid: false},},
-            y: {field: "Node_y_coord", type: "quantitative"axis: {grid: false},},
+            x: {field: "Node_x_coord", type: "quantitative", axis: {grid: false},},
+            y: {field: "Node_y_coord", type: "quantitative", axis: {grid: false},},
             }
           },
           {data: {values: that.result.points, format:{type: "json"}},
