Took grid out of FitDiscrete spec, testing download

--- a/asr/index.html
+++ b/asr/index.html
@@ -333,7 +333,7 @@
 
       var spec = {
 
-        title: "Fit Continuous Result",
+        title: "Ancestral State Reconstruction",
         width: 1200,
         height: 800,
         layer: [
