--- a/fit_discrete/index.html
+++ b/fit_discrete/index.html
@@ -324,8 +324,8 @@
       var spec = {
 
           title: "Fit Discrete Result",
-          width: 800,
-          height: 800,
+          width: 900,
+          height: 900,
           layer: [
             {data: {values: that.result.points, format:{type: "json"}},
             params: [{
@@ -335,8 +335,8 @@
             }],
             mark: {type:"point", fill: "#4C78A8"},
             encoding: {
-              x: {field: "x", type: "quantitative"},
-              y: {field: "y", type: "quantitative"},
+              x: {field: "x", type: "quantitative", axis: {grid: false}},
+              y: {field: "y", type: "quantitative", axis: {grid: false}},
               }
             },
             {data: {values: that.result.points, format:{type: "json"}},
@@ -373,7 +373,7 @@
           // iterate through the first row to find the column names
           var csvOutput = ''
           // print the title line
-          for (const key in this.result[0]) {
+          for (const key in this.result) {
             if ((key != 'points') && (key != 'connections')) {
             csvOutput += key+','
             }
@@ -382,9 +382,9 @@
           csvOutput += '\n'
 
           // print out the values
-          for (const key in this.result[0]) {
+          for (const key in this.result) {
             if ((key != 'points') && (key != 'connections')) {
-            csvOutput += this.result[0][key]+','
+            csvOutput += this.result[key]+','
             }
           }
           // ToDo: would be best to strip off the last comma here
