Added Parsimony Tree app

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
               url: '/fit_discrete',
               image: '/static/fitDiscrete_app.png',
             },
+            {
+              name: 'Parsimony Tree',
+              description: 'Use a character matrix to make a maximum parsimony tree',
+              url: '/parsimony_tree',
+              image: '/static/parsimonyTree.PNG',
+            },
           ],
         };
       },
