--- a/parsimony_tree/index.html
+++ b/parsimony_tree/index.html
@@ -36,10 +36,11 @@
               ref="treeFile"
               @change="uploadTree($event.target.files[0])"
             >
-          </v-flex> -->
+          </v-flex> 
           <v-flex xs12>
             <v-select label="testing" v-model="placeholder" :items="placeholders" />
           </v-flex>
+          -->
         <br><br>
 	      <v-flex xs12>
             <v-btn
@@ -132,7 +133,7 @@
     job: { status: 0 },
     running: false,
     placeholders: ['bloop', 'blarp'],
-    placeholder: '',
+    placeholder: 'bloop',
     runCompleted: false,
     result: [],
     resultColumns: [],
@@ -294,8 +295,12 @@
             }],
             mark: {type:"point", fill: "#4C78A8", tooltip: {content: "data"}},
             encoding: {
-              x: {field: "Node_x_coord", type: "quantitative", axis: {grid: false},},
-              y: {field: "Node_y_coord", type: "quantitative", axis: {grid: false},},
+              x: {field: "Node_x_coord", type: "quantitative",
+              axis: {labelFontSize:0,domain: false, axisColor: null, grid: false, ticks: false},
+              title: null},
+              y: {field: "Node_y_coord", type: "quantitative",
+              axis: {labelFontSize:0,domain: false, axisColor: null, grid: false, ticks: false},
+              title: null},
               }
             },
             {data: {values: that.result.points, format:{type: "json"}},
@@ -331,8 +336,8 @@
             },
           ]
           };
-
-            vegaEmbed(that.$refs.mp_plot, spec);
+            //var renderOptions = (),
+            vegaEmbed(that.$refs.mp_plot, spec, {padding: 10, actions: {export: true, source: false, editor: false, compiled: false}})
           },
 
 
