--- a/fit_continuous/index.html
+++ b/fit_continuous/index.html
@@ -360,8 +360,12 @@
             }],
             mark: {type:"point", fill: "#4C78A8", tooltip: {content: "data"}},
             encoding: {
-              x: {field: "Node_x_coord", type: "quantitative"},
-              y: {field: "Node_y_coord", type: "quantitative"},
+              x: {field: "Node_x_coord", type: "quantitative",
+              axis: {labelFontSize:0,domain: false, axisColor: null, grid: false, ticks: false},
+              title: null},
+              y: {field: "Node_y_coord", type: "quantitative",
+              axis: {labelFontSize:0,domain: false, axisColor: null, grid: false, ticks: false},
+              title: null},
               }
             },
             {data: {values: that.result.points, format:{type: "json"}},
