work in progress: new table vis app

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
               url: '/parsimony_tree',
               image: '/static/parsimonyTree.PNG',
             },
+            {
+              name: 'Table Explore with LineUp',
+              description: 'Explore the contents of a character matrix',
+              url: '/table_lineup',
+              image: '/static/lineup_picture.png',
+            },
           ],
         };
       },
