Attempting to fix asr download problems

--- a/asr/index.html
+++ b/asr/index.html
@@ -414,7 +414,7 @@
   	    // iterate through the first row to find the column names
         var csvOutput = ''
 
-        for (var key in this.result) {
+        for (const key in this.result) {
             if ((key != 'points') && (key != 'connections')) {
             csvOutput += key+','
             }
@@ -423,26 +423,25 @@
 
         for (const key in this.result) {
           if ((key != 'points') && (key != 'connections')) {
-            csvOutput += result[key]+','
+            csvOutput += this.result[key]+','
           }
         }
         csvOutput += "\n";
 
-
-  	// the csv seems to be created correctly
-          //console.log(csvOutput);
-  	//csvOutput = JSON.stringify(csvOutput)
-  	console.log(csvOutput)
-    const url = window.URL.createObjectURL(new Blob([csvOutput]));
-  	console.log("url:",url)
-  	// this is an old but still normal way to download a file, attach it to an
-  	// <a> tag and click the link.  We then remove the tag after downloaing.
-          const link = document.createElement('a');
-          link.href = url;
-          link.setAttribute('download', 'model_results.csv') //or any other extension;
-          document.body.appendChild(link);
-          link.click();
-  	document.body.removeChild(link);
+	     // the csv seems to be created correctly
+       //console.log(csvOutput);
+	     //csvOutput = JSON.stringify(csvOutput)
+	     console.log(csvOutput)
+       const url = window.URL.createObjectURL(new Blob([csvOutput]));
+	     console.log("url:",url)
+	     // this is an old but still normal way to download a file, attach it to an
+	     // <a> tag and click the link.  We then remove the tag after downloaing.
+       const link = document.createElement('a');
+       link.href = url;
+       link.setAttribute('download', 'model_results.csv') //or any other extension;
+       document.body.appendChild(link);
+       link.click();
+	     document.body.removeChild(link);
       },
 
     }
